--- a/app/src/main/res/layout/activity_hey_world.xml
+++ b/app/src/main/res/layout/activity_hey_world.xml
@@ -12,11 +12,11 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OkButton"
+        android:text="@string/nextActivity"
         android:id="@+id/button"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="54dp"
         android:layout_below="@+id/textView"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
